--- a/UserSecrets/SecretsPackageTest.csproj
+++ b/UserSecrets/SecretsPackageTest.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>joerivanarkel.UserSecrets</PackageId>
+    <Version>0.1</Version>
+    <Authors>Joeri van Arkel</Authors>
+    <Company>vanarkel</Company>
   </PropertyGroup>
 
   <ItemGroup>
