--- a/UserSecrets/SecretsPackageTest.csproj
+++ b/UserSecrets/SecretsPackageTest.csproj
@@ -7,6 +7,7 @@
     <Version>0.1</Version>
     <Authors>Joeri van Arkel</Authors>
     <Company>vanarkel</Company>
+    <RepositoryUrl>https://github.com/joerivanarkel/SecretsPackageTest</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
