--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
           
       - name: Build solution and generate NuGet package
         run: |  
-          cd .\UserSecrets\
+          cd UserSecrets
           dotnet pack -c Release -o out  
 
       - name: Push generated package to GitHub registry
