--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,5 +39,5 @@ jobs:
           dotnet pack -c Release -o out  
 
       - name: Push generated package to GitHub registry
-        run: dotnet nuget push ./UserSecrets/out/*.nupkg --skip-duplicate --no-symbols true
+        run: dotnet nuget push ./UserSecrets/out/*.nupkg --api-key ${{secrets.TOKEN}} --source "github" --skip-duplicate --no-symbols true
   
