--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,6 +37,9 @@ jobs:
         run: |  
           cd UserSecrets
           dotnet pack -c Release -o out  
+      
+      - name: Register NuGet source
+        run: dotnet nuget add source --username joerivanarkel--password ${{secrets.TOKEN}} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/joerivanarkel/index.json"
 
       - name: Push generated package to GitHub registry
         run: dotnet nuget push ./UserSecrets/out/*.nupkg --api-key ${{secrets.TOKEN}} --source "github" --skip-duplicate --no-symbols true
