--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,16 @@ mono_crash.*
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
+[Rr]elease/net6.0/
 [Rr]eleases/
+net6.0/
 x64/
 x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in/net.6.0/
+[Bb]in/net6.0/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
@@ -194,8 +195,6 @@ publish/
 # in these scripts will be unencrypted
 PublishScripts/
 
-# NuGet Packages
-*.nupkg
 # NuGet Symbol Packages
 *.snupkg
 # The packages folder can be ignored because of Package Restore
