--- a/.gitignore
+++ b/.gitignore
@@ -452,3 +452,5 @@ $RECYCLE.BIN/
 !.vscode/launch.json
 !.vscode/extensions.json
 UserSecrets/NuGet.config
+UserSecrets/pushpackage.txt
+pushpackage.txt
