--- a/UserSecrets/SecretsPackageTest.csproj
+++ b/UserSecrets/SecretsPackageTest.csproj
@@ -4,15 +4,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>joerivanarkel.UserSecrets</PackageId>
-    <Version>0.1.2</Version>
+    <Version>0.1.3</Version>
     <Authors>Joeri van Arkel</Authors>
     <Company>vanarkel</Company>
     <RepositoryUrl>https://github.com/joerivanarkel/UserSecrets</RepositoryUrl>
+    <PackageIcon>icon.jpg</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <None Include=".\icon.jpg" Pack="true" PackagePath="\"/>
   </ItemGroup>
-
 </Project>
