--- a/UserSecrets/SecretsPackageTest.csproj
+++ b/UserSecrets/SecretsPackageTest.csproj
@@ -4,10 +4,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>joerivanarkel.UserSecrets</PackageId>
-    <Version>0.1.3</Version>
+    <Version>0.1.4</Version>
     <Authors>Joeri van Arkel</Authors>
     <Company>vanarkel</Company>
     <RepositoryUrl>https://github.com/joerivanarkel/UserSecrets</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/joerivanarkel/UserSecrets</PackageProjectUrl>
     <PackageIcon>icon.jpg</PackageIcon>
   </PropertyGroup>
 
