--- a/UserSecrets/SecretsPackageTest.csproj
+++ b/UserSecrets/SecretsPackageTest.csproj
@@ -4,17 +4,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>joerivanarkel.UserSecrets</PackageId>
-    <Version>0.1.4</Version>
+    <Version>0.1.5</Version>
     <Authors>Joeri van Arkel</Authors>
     <Company>vanarkel</Company>
     <RepositoryUrl>https://github.com/joerivanarkel/UserSecrets</RepositoryUrl>
     <PackageProjectUrl>https://github.com/joerivanarkel/UserSecrets</PackageProjectUrl>
-    <PackageIcon>icon.jpg</PackageIcon>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
-    <None Include=".\icon.jpg" Pack="true" PackagePath="\"/>
+    <None Include=".\icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 </Project>
